# arxivist

./: .gitignore  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
workspace/paper-repos/Arxivist 11 paper repos/: CHANGELOG.md  LICENSE  README.md  backtest.py  environment.yaml  evaluate.py  inference.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
workspace/paper-repos/Arxivist 11 paper repos/configs/: config.yaml
workspace/paper-repos/Arxivist 11 paper repos/data/: README_data.md  download.py
workspace/paper-repos/Arxivist 11 paper repos/docker/: Dockerfile  docker-compose.yml
workspace/paper-repos/Arxivist 11 paper repos/notebooks/: reproduce_arxiv_2505_01575.ipynb
workspace/paper-repos/Arxivist 11 paper repos/src/sert_asset_pricing/data/: dataset.py  transforms.py
workspace/paper-repos/Arxivist 11 paper repos/src/sert_asset_pricing/evaluation/: backtest.py  metrics.py
workspace/paper-repos/Arxivist 11 paper repos/src/sert_asset_pricing/models/: attention.py  blocks.py  mlp_autoencoder.py  positional_encoding.py  transformer_variants.py
workspace/paper-repos/Arxivist 11 paper repos/tests/: test_smoke.py
workspace/paper-repos/arxiv_2511_19942/: .gitignore  README.md  environment.yaml  evaluate.py  inference.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
workspace/paper-repos/arxiv_2511_19942/configs/: config.yaml
workspace/paper-repos/arxiv_2511_19942/docker/: Dockerfile  docker-compose.yml
workspace/paper-repos/arxiv_2511_19942/src/diffsmooth/: __init__.py
(+1330 files in other folders)
