[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sert-asset-pricing"
version = "0.1.0"
description = "ArXivist-generated reproduction of 'Asset Pricing in Pre-trained Transformers' (arXiv:2505.01575)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
