[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diffsmooth"
version = "0.1.0"
description = "Scaled-down reproduction of arXiv:2511.19942 (Differential Smoothing) on Countdown"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
